recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not found: value treedroit
    treedroit();
    ^Tree:8: error: not found: value treegauche
    treegauche();
    ^Tree:30: error: ambiguous reference to overloaded definition,
both method tree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
and  method tree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
match argument types (Int,Double,Double,Double)
		tree(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double],
                ^Tree:13: error: method tree is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Tree'
def tree(steps:Int, length:Double, angle:Double, shrink:Double)   
    ^